gitops/vaultwarden/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bitwarden
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: bitwarden
    weight: 100
  wildcardPolicy: None
